# meetingai

./: .env.example  .gitignore  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  start_local.sh  transcribe_diarize.py
.github/workflows/: deploy.yml
backend/: Dockerfile
backend/api/: main.py
backend/api/routes/: __init__.py  meetings.py  system.py  websocket.py
backend/core/: config.py  database.py  redis_client.py
backend/models/: __init__.py  meeting.py
backend/services/diarization/: __init__.py  pipeline.py
backend/services/nlp/: __init__.py  processor.py
backend/services/transcription/: __init__.py  transcriber.py
backend/services/vad/: __init__.py  detector.py
backend/worker/: tasks.py
docs/: diarization-upgrade.md
docs/superpowers/plans/: 2026-03-19-meetingai-rewrite.md
docs/superpowers/specs/: 2026-03-19-meetingai-rewrite-design.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  app.tsx  index.css
frontend/src/api/: client.ts  meetings.ts
frontend/src/components/: Layout.tsx
frontend/src/components/layout/: app-layout.tsx  icon-sidebar.tsx  meeting-list.tsx
frontend/src/components/meeting/: detail-header.tsx  failed-view.tsx  meeting-content.tsx  processing-view.tsx  recording-manager.tsx  speaker-editor.tsx  summary-panel.tsx  timeline-panel.tsx  transcript-panel.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  progress-bar.tsx  search-input.tsx
frontend/src/contexts/: settings.tsx  theme.tsx
frontend/src/hooks/: use-export.ts  use-meetings.ts  use-progress.ts  use-regenerate.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: MeetingPage.tsx  MeetingsListPage.tsx  UploadPage.tsx  meeting-page.tsx  settings-page.tsx
frontend/src/types/: index.ts
ml_services/: Dockerfile  diarization_service.py  vad_service.py
